<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_auth">

    <fragment
        android:id="@+id/navigation_auth"
        android:name="com.example.urbanfix.ui.auth.AuthFragment"
        android:label="@string/title_auth"
        tools:layout="@layout/fragment_auth">

        <action
            android:id="@+id/action_navigation_auth_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_auth"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.urbanfix.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_road_damage_report"
            app:destination="@id/navigation_road_damage_report" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_issue_detail"
            app:destination="@id/navigation_issue_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_road_damage_report"
        android:name="com.example.urbanfix.ui.issues.ReportFragment"
        android:label="@string/issue_form_title"
        tools:layout="@layout/fragment_road_damage_report">
        <argument
            android:name="category"
            app:argType="string"
            android:defaultValue="Drogi" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.urbanfix.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_issue_detail"
            app:destination="@id/navigation_issue_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.urbanfix.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_issue_detail"
        android:name="com.example.urbanfix.ui.issues.IssueDetailFragment"
        android:label="@string/issue_detail_title"
        tools:layout="@layout/fragment_issue_detail">

        <argument
            android:name="issueId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.urbanfix.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_navigation_my_issues"
            app:destination="@id/navigation_my_issues" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_issues"
        android:name="com.example.urbanfix.ui.issues.MyIssuesFragment"
        android:label="@string/title_my_issues"
        tools:layout="@layout/fragment_my_issues">
        <action
            android:id="@+id/action_navigation_my_issues_to_navigation_issue_detail"
            app:destination="@id/navigation_issue_detail" />
    </fragment>
</navigation>